[gd_scene load_steps=4 format=3 uid="uid://dypngsvabgm58"]

[ext_resource type="Script" uid="uid://c7sjlbppw511f" path="res://scenes/game_over_ui/game_over_ui.gd" id="1_8meoh"]
[ext_resource type="LabelSettings" uid="uid://btf15kos0mkbq" path="res://resources/lg_orange_72.tres" id="2_6vlyr"]
[ext_resource type="LabelSettings" uid="uid://b6a5gyubawi2j" path="res://resources/lg_white_24.tres" id="3_8meoh"]

[node name="GameOverUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8meoh")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.25098, 0.0588235, 0.505882, 0.588235)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -25.0
offset_right = 46.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverLabel" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
text = "GAME OVER"
label_settings = ExtResource("2_6vlyr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CurrentScoreLabel" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
text = "Current Score: 123456"
label_settings = ExtResource("3_8meoh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighScoreLabel" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
text = "High Score: 123456"
label_settings = ExtResource("3_8meoh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContinueLabel" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
text = "Press Fire To Continue"
label_settings = ExtResource("3_8meoh")
horizontal_alignment = 1
vertical_alignment = 1
